:lipstick: Prevent overflow on interactive container

--- a/main.sass
+++ b/main.sass
@@ -29,6 +29,7 @@ $clippath-animation-duration: 0.7s
 .you-draw-it
   margin: 30px 0
   position: relative
+  overflow: hidden
 
   #gradient-black
     .start
